Fixing width on body, no overflow 	modified:   src/index.css

--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ html {
 
 #root {
   width: 100%;
-  
+  overflow: hidden;
 }
 
 
